<resources>
    <string name="app_name">EdgeSum</string>
    <string name="title_activity_processing">ProcessingActivity</string>

    <!-- Bottom Navigation Titles -->
    <string name="title_raw_footage">Raw Footage</string>
    <string name="title_processing">Processing</string>
    <string name="title_summarised_videos">Summarised Videos</string>

    <!-- Setting Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="workflow_header">Workflow</string>
    <string name="video_header">Video</string>
    <string name="segmentation_header">Segmentation</string>

    <!-- Summarisation Preferences -->
    <string name="auto_retrieval_title">Auto Retrieval</string>
    <string name="auto_retrieval_summary_on">Automatically retrieve videos from the dashcam</string>
    <string name="auto_retrieval_summary_off">Only retrieve videos when manually requested</string>

    <string name="auto_summarise_title">Auto Summarise</string>
    <string name="auto_summarise_summary_on">Automatically add raw videos to the processing queue.</string>
    <string name="auto_summarise_summary_off">Only add raw videos to the processing queue when manually requested</string>

    <string name="auto_upload_title">Auto Upload</string>
    <string name="auto_upload_summary_on">Automatically upload summarised video to the Cloud storage</string>
    <string name="auto_upload_summary_off">Only upload summarised video to the Cloud storage when manually requested</string>
    <string name="noise_tolerance_title">Noise tolerance</string>
    <string name="quality_title">Quality</string>
    <string name="encoding_speed_title">Encoding speed</string>
    <string name="duration_title">Duration (decisecond)</string>
    <string name="noise_key">noise</string>
    <string name="duration_key">duration</string>
    <string name="quality_key">quality</string>
    <string name="encoding_speed_key">speed</string>

    <string name="discover_switch_label">Discover nearby devices</string>
    <string name="advertise_switch_label">Share device information</string>
    <string name="send">Send</string>
    <string name="preference_file_key">com.example.edgesum.PREFERENCE_FILE_KEY</string>
    <string name="video_to_send">video_to_send</string>
    <string name="connection_status_content_description">connection status</string>
    <string name="disconnect_button_content_description">disconnect button</string>
    <string name="remove_device_button_content_description">remove device button</string>
    <string name="local_name_label">Local Name:</string>
    <string name="auto_send_videos">Auto-send videos</string>
    <string name="connect">Connect</string>
    <string name="download">Download</string>
    <string name="object_detection">Object Detection</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="clean_directories">Clean Directories</string>
    <string name="enable_segment_key">enable_segment</string>
    <string name="auto_segment_key">auto_segment</string>
    <string name="manual_segment_key">manual_segment</string>
    <string name="enable_segment_summary_off">Send whole video files to worker phones</string>
    <string name="enable_segment_summary_on">Send video segments to worker phones</string>
    <string name="auto_segment_summary">Number of segments a video is split into will be determined by the number of connected worker phones</string>
    <string name="enable_segment_title">Enable Segmentation</string>
    <string name="auto_segment_title">Auto Segment Number</string>
    <string name="manual_segment_title">Manual Segment Number</string>

    <string name="scheduling_algorithm_title">Scheduling Algorithm</string>
    <string name="best_algorithm_title">Best</string>
    <string name="fastest_algorithm_title">Fastest</string>
    <string name="least_busy_algorithm_title">Least Busy</string>
    <string name="ordered_algorithm_title">Ordered</string>
    <string name="best_or_local_algorithm_title">Best or Local</string>
    <string name="simple_return_algorithm_title">Quick Return</string>

    <string name="scheduling_algorithm_key">scheduling_algorithm</string>
    <string name="best_algorithm_key">best</string>
    <string name="fastest_algorithm_key">fastest</string>
    <string name="least_busy_algorithm_key">least_busy</string>
    <string name="ordered_algorithm_key">ordered</string>
    <string name="best_or_local_algorithm_key">best_or_local</string>
    <string name="simple_return_algorithm_key">simple_return</string>

    <string name="video_thumbnail_content_description">video thumbnail</string>
    <string name="select_all">select_all</string>
    <string name="remove_raw_title">Remove raw</string>
    <string name="remove_raw_summary">Remove raw videos during clean</string>
    <string name="remove_raw_key">remove_raw</string>
    <string name="download_delay_key">download_delay</string>
    <string name="download_delay_title">Download Delay</string>
    <string name="fast_scheduling_summary">Enable fast video scheduling mode, recommended when using auto-send</string>
    <string name="fast_scheduling_key">fast_scheduling</string>
    <string name="fast_scheduling_title">Fast Scheduling</string>


    <!-- String Arrays -->
    <string-array name="speed_values">
        <item>ultrafast</item>
        <item>superfast</item>
        <item>veryfast</item>
        <item>faster</item>
        <item>fast</item>
        <item>medium</item>
        <item>slow</item>
        <item>slower</item>
        <item>veryslow</item>
    </string-array>
    <string-array name="algorithm_titles">
        <item>@string/best_algorithm_title</item>
        <item>@string/fastest_algorithm_title</item>
        <item>@string/least_busy_algorithm_title</item>
        <item>@string/ordered_algorithm_title</item>
        <item>@string/best_or_local_algorithm_title</item>
        <item>@string/simple_return_algorithm_title</item>
    </string-array>
    <string-array name="algorithm_keys">
        <item>@string/best_algorithm_key</item>
        <item>@string/fastest_algorithm_key</item>
        <item>@string/least_busy_algorithm_key</item>
        <item>@string/ordered_algorithm_key</item>
        <item>@string/best_or_local_algorithm_key</item>
        <item>@string/simple_return_algorithm_key</item>
    </string-array>
    <string-array name="object_detection_models">
        <item>yolov5</item>
        <item>squeezenet</item>
        <item>styletransfer</item>
        <item>mobilenetssd</item>
        <item>mtcnn</item>
    </string-array>
</resources>
