<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.edgesum.MainActivity">
    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/ic_wifi_tethering_white_24dp"
        android:orderInCategory="100"
        android:title="@string/connect"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download"
        android:icon="@android:drawable/stat_sys_download"
        android:orderInCategory="200"
        android:title="@string/download"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clean"
        android:icon="@drawable/ic_clean"
        android:orderInCategory="300"
        android:title="@string/clean_directories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_dark"
        android:orderInCategory="400"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_dark"
        android:orderInCategory="500"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>